--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "storybook-react-router": "^1.0.8"
   },
   "husky": {
     "hooks": {
